deploy/k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    app.kubernetes.io/part-of: ace-platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
  labels:
    istio-injection: enabled
    app.kubernetes.io/part-of: ace-platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: karpenter
  labels:
    app.kubernetes.io/part-of: ace-platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: ace-exchange
  labels:
    istio-injection: enabled
    app.kubernetes.io/part-of: ace-platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: ace-services
  labels:
    istio-injection: enabled
    app.kubernetes.io/part-of: ace-platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: ace-infra
  labels:
    app.kubernetes.io/part-of: ace-platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: ace-monitoring
  labels:
    app.kubernetes.io/part-of: ace-platform
