deploy/k8s/base/nodelocal-dnscache.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-local-dns
  namespace: kube-system
  labels:
    app.kubernetes.io/name: node-local-dns
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: node-local-dns
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: "10%"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: node-local-dns
    spec:
      serviceAccountName: node-local-dns
      priorityClassName: system-node-critical
      hostNetwork: true
      dnsPolicy: Default
      tolerations:
        - operator: Exists
          effect: NoSchedule
        - operator: Exists
          effect: NoExecute
      containers:
        - name: node-cache
          image: registry.k8s.io/dns/k8s-dns-node-cache:1.22.28
          resources:
            requests:
              cpu: 25m
              memory: 25Mi
            limits:
              memory: 100Mi
          args:
            - "-localip"
            - "169.254.20.10"
            - "-conf"
            - "/etc/Corefile"
            - "-upstreamsvc"
            - "kube-dns"
            - "-skipteardown=true"
            - "-setupinterface=true"
            - "-setupiptables=true"
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - containerPort: 53
              name: dns
              protocol: UDP
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 9253
              name: metrics
              protocol: TCP
          livenessProbe:
            httpGet:
              host: 169.254.20.10
              path: /health
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /run/xtables.lock
              name: xtables-lock
              readOnly: false
            - name: config-volume
              mountPath: /etc/coredns
            - name: kube-dns-config
              mountPath: /etc/Corefile
              subPath: Corefile
      volumes:
        - name: xtables-lock
          hostPath:
            path: /run/xtables.lock
            type: FileOrCreate
        - name: config-volume
          configMap:
            name: node-local-dns
        - name: kube-dns-config
          configMap:
            name: node-local-dns
            items:
              - key: Corefile
                path: Corefile
